force-app/main/default/objects/Quarantine__c/Quarantine__c.object-meta.xml
<CustomObject>
    <description>This will track any quaratine tracking needed for a related animal</description>
    <label>Quarantine</label>
    <nameField>
        <displayFormat>Q-{0}</displayFormat>
        <label>Quarantine ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quarantines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>