force-app/main/default/objects/Quarantine__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of Quarentine</description>
    <inlineHelpText>This is a required field.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bite</fullName>
                <default>true</default>
                <label>Bite</label>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Other (Please explain in reason field)</fullName>
            </value>
            <value>
                <fullName>Scratch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>